--- a/contact-style-one/index.html
+++ b/contact-style-one/index.html
@@ -387,56 +387,8 @@ var wc_add_to_cart_params = {"ajax_url":"\/wp\/Themotovision\/wp-admin\/admin-aj
 
 	
 
-<script type="text/javascript">
-
-		// Google Map Settings
-
-	if(jQuery('#map-location').length){
-
-		var map;
-
-		 map = new GMaps({
-
-			el: '#map-location',
-
-			zoom: 14,
-
-			scrollwheel:false,
-
-			//Set Latitude and Longitude Here
-			
-
-			lat: 19.00790149131402,
-
-			lng: 72.82363225248225
-		  });
-
-		  
-
-		  //Add map Marker
-
-		  map.addMarker({
-
-			lat: 19.00790149131402,
-
-			lng: 72.82363225248225,
-
-			infoWindow: {
-
-			  content: '<p style="text-align:center;"><strong>Themotovision</strong><br>worli mumbai, Maharastra</p>'
-
-			}
-
-		 
-
-		});
-
-	}
-
-	
-
-</script>
-
+<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15089.07690035912!2d72.8236312!3d19.0078547!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x775b09b312ea0b0a!2sThe%20Moto%20Vision!5e0!3m2!1sen!2sin!4v1611524987119!5m2!1sen!2sin"
+	width="1300" height="600" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 
 	</div>
 </div><div class="vc_row wpb_row vc_row-fluid"><div class="wpb_column col-md-12">
